--- a/Source/AbTests/AbTests.Api/AbTests.Api.csproj
+++ b/Source/AbTests/AbTests.Api/AbTests.Api.csproj
@@ -8,13 +8,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Autofac" Version="6.5.0" />
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="Dapper" Version="2.0.123" />
+        <PackageReference Include="Dapper.Transaction" Version="2.0.123" />
+        <PackageReference Include="Npgsql" Version="6.0.8" />
+        <PackageReference Include="Polly" Version="7.2.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Controllers" />
-      <Folder Include="Dto" />
-      <Folder Include="Enums" />
     </ItemGroup>
 
     <ItemGroup>
