--- a/Source/AbTests/AbTests.Api/Properties/launchSettings.json
+++ b/Source/AbTests/AbTests.Api/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7248;http://localhost:5114",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DB_CONNECTIONSTRING" : "host=localhost;Port=5433;Database=postgres;username=user;Password=123;"
       }
     },
     "IIS Express": {
@@ -24,7 +25,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DB_CONNECTIONSTRING" : "host=localhost;Port=5433;Database=postgres;username=user;Password=123;"
       }
     }
   }
